--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Two Activities</string>
-    <string name="send_button">Send</string>
+    <string name="button_main">Send</string>
     <string name="activity2_name">Second Activity</string>
-    <string name="text_header">Message Recieved</string>
+    <string name="text_header">Message Received</string>
     <string name="editText_main">Enter Your Message Here</string>
     <string name="button_second">Reply</string>
     <string name="editText_second">Enter Your Reply Here</string>
